--- a/ProyectoFinal/css/style.css
+++ b/ProyectoFinal/css/style.css
@@ -212,22 +212,128 @@
     color: #11101d;
     font-size: 25px;
     font-weight: 500;
-    margin: 50px;
+    margin: 40px;
     padding: 10px;
 }
 
-.saludo{
+.saludo ,h2{
     font-family: 'Cookie', cursive;
-    font-size: 50px;
+    font-size: 90px;
 }
 
+.img_profile {
+  border-radius: 50%;
+  width: 100%;
+  display: block;
+  height: auto;
+  margin-left: auto;
+}
+.container {
+  position: relative;
+  width: 40%;
+  float: right;
+}
 
+.overlay {
+  position: absolute;
+  bottom: 0;
+  left: 100%;
+  right: 0;
+  background-color: #d24858;
+  overflow: hidden;
+  width: 0;
+  height: 100%;
+  transition: .5s ease;
+  border-radius: 50%;
+}
 
+.container:hover .overlay {
+  width: 100%;
+  left: 0;
+}
 
+.nombre {
+  white-space: nowrap; 
+  color: #fdeecd;
+  font-size: 20px;
+  position: absolute;
+  overflow: hidden;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
 
-  @media (max-width: 420px) {
-    .sidebar li .tooltip{
-      display: none;
-    }
+.btn_group {
+  margin: 20px;
+  align-items: center;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.boton {
+  background-color: #1D3461;
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  padding: 16px 32px;
+  margin: 4px 2px;
+  font-size: 16px;
+  display: block;
+}
+
+.boton:hover {
+  background-color: #ffffff;
+  color: #1D3461;
+}
+.boton a {
+  color: #ffffff;
+  text-decoration: none;
+}
+.boton a:hover {
+  background-color: #ffffff;
+  color: #1D3461;
+}
+.boton i {
+  margin-right: 10px;
+}
+
+article {
+  display: block;
+  margin: 20px;
+  padding: 10px;
+}
+.subtitulo {
+  font-family: 'Cookie', cursive;
+    font-size: 50px;
+}
+#ir-arriba{
+  width: 50px;
+  height: 50px;
+  background-color: #1D3461;
+  color: #fdeecd;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  position: fixed;
+  bottom: 20px;
+  border-radius: 50%;
+  right:10px;
+  z-index: 2;
+}
+
+.listado li{
+  list-style: none;
+}
+.listado i{
+  margin-right: 10px;
+}
+@media (max-width: 420px) {
+  .sidebar li .tooltip{
+   display: none;
   }
+}
   
