--- a/ProyectoFinal/css/style.css
+++ b/ProyectoFinal/css/style.css
@@ -331,9 +331,110 @@ article {
 .listado i{
   margin-right: 10px;
 }
+
+.btn-click {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.btn-saludo {
+  background-color: #d24858;
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  padding: 16px 32px;
+  margin: 4px 2px;
+  font-size: 16px;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+.btn-saludo:hover {
+  background-color: #ffffff;
+  color: #d24858;
+  border: 2px solid #d24858;
+}
+
+#saludoFinal {
+  font-family: 'Cookie', cursive;
+  font-size: 70px;
+  color: #1D3461;
+  text-align: right;
+}
+
+
 @media (max-width: 420px) {
   .sidebar li .tooltip{
    display: none;
   }
+  .content{
+    position: relative;
+    background-color: #fdeecd;
+    min-height: 100vh;
+    top: 0;
+    left: 78px;
+    width: 90%;
+    transition: all 0.5s ease;
+    z-index: 2;
+ }
+
+  .content .text{
+    display: inline-block;
+    color: #11101d;
+    font-size: 16px;
+    font-weight: 400;
+    margin: 20px;
+    padding: 10px;
+  }
+
+  .btn_group {
+    margin: 20px;
+    align-items: center;
+    width:100%;
+    display: block;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .boton {
+    background-color: #1D3461;
+    color: #ffffff;
+    border: none;
+    border-radius: 4px;
+    padding: 16px 32px;
+    margin: 4px 2px;
+    font-size: 16px;
+    display: block;
+  }
+
+  #ir-arriba{
+    width: 50px;
+    height: 50px;
+    background-color: #1D3461;
+    color: #fdeecd;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    position: fixed;
+    bottom: 20px;
+    border-radius: 50%;
+    right:40px;
+    z-index: 2;
+  }
+
+  .btn-click {
+    display: block;
+    justify-content: center;
+  }
+
+  #saludoFinal {
+    font-family: 'Cookie', cursive;
+    font-size: 30px;
+    color: #1D3461;
+    text-align: right;
+  }
+  
 }
+
   
